fix contact modal width on mobile

--- a/CodeBlog/CodeBlog/static/css/News/modal.css
+++ b/CodeBlog/CodeBlog/static/css/News/modal.css
@@ -13,16 +13,23 @@ Author: Zach Moore - Zach@NerdVenture.net
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.5); /* Black w/ opacity */
+    background-color: rgba(0,0,0,0.7); /* Black w/ opacity */
     opacity: 0;
   }
   
   /* Modal Content/Box */
   .modal-content {
-      position: absolute;
-      top:50%; left:50%;
+    position: absolute;
+    top:50%; left:50%;
     transform: translate(-50%, -50%);
-    max-width: 60vw; /* Could be more or less, depending on screen size */
+    width: 100%;
+    max-width: 50vw; 
+  }
+
+  @media screen and (max-width: 992px) {
+    .modal-content {
+      max-width: 90%;
+    }
   }
 
   .modal-content h2{
@@ -33,7 +40,7 @@ Author: Zach Moore - Zach@NerdVenture.net
       width: 2em; height: 2em;
       padding: 0.5em;
       position: absolute;
-      right:0; top:0;
+      right: -2em; top: -2em;
       transform: translate(50%, -50%);
       border-radius: 50%;
   }
